brag post detail page functioning

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,1 +1,2 @@
-<div class=" badge badge-accent">Posted By: {{user.username}}    On: {{ formatDate post_date }} </div>
+<div class=" badge badge-accent text-lg">Posted By: {{user.username}} </div><div class=" badge badge-accent-content text-accent text-lg"> On: {{ formatDate post_date }} </div>
+
