file structure rearranged

--- a/views/partials/rating-hearts.handlebars
+++ b/views/partials/rating-hearts.handlebars
@@ -5,3 +5,4 @@
   <input type="radio" name="rating-3" class="mask mask-heart bg-lime-400" />
   <input type="radio" name="rating-3" class="mask mask-heart bg-green-400" />
 </div>
+<script src ="/scripts/rating.js" type="application/javascript"></script>
