--- a/views/partials/rating-hearts.handlebars
+++ b/views/partials/rating-hearts.handlebars
@@ -1,8 +1,8 @@
 <div class="rating rating-lg gap-1">
-  <input type="radio" name="rating-3" class="mask mask-heart bg-red-400" />
-  <input type="radio" name="rating-3" class="mask mask-heart bg-orange-400" checked />
-  <input type="radio" name="rating-3" class="mask mask-heart bg-yellow-400" />
-  <input type="radio" name="rating-3" class="mask mask-heart bg-lime-400" />
-  <input type="radio" name="rating-3" class="mask mask-heart bg-green-400" />
+  <input type="radio" name="rating-3" value="1" class="mask mask-heart bg-red-400" data-id="{{id}}" checked />
+  <input type="radio" name="rating-3" value="2" class="mask mask-heart bg-orange-400" data-id="{{id}}" />
+  <input type="radio" name="rating-3" value="3" class="mask mask-heart bg-yellow-400" data-id="{{id}}"/>
+  <input type="radio" name="rating-3" value="4" class="mask mask-heart bg-lime-400" data-id="{{id}}" />
+  <input type="radio" name="rating-3" value="5" class="mask mask-heart bg-green-400" data-id="{{id}}"/>
 </div>
 <script src ="/scripts/rating.js" type="application/javascript"></script>
