hero image removed from other pages except home

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,4 @@
+{{>hero-image}}
 <main class="home md:grid md:grid-cols-auto-fill md: gap-4 mb-24">
     {{#each brags as |post|}}
         {{> homepage--post-preview-card}}
