login bug fixed

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,4 +1,4 @@
-<header class="navbar bg-neutral text-accent rounded-xl font-heading">
+<header class="navbar bg-neutral text-accent rounded-xl font-heading mt-4">
     <div class="navbar-start">
         <a class="text-2xl font-semibold hover:opacity-70 rounded-md" href="/">Home</a>
     </div>
