--- a/views/partials/hero-image.handlebars
+++ b/views/partials/hero-image.handlebars
@@ -1,4 +1,4 @@
-<div class="w-full h-110 bg-[url('/images/high-self-esteem.jpg')] bg-contain  relative z-1">
+<div class="w-full h-110 bg-[url('/images/high-self-esteem.jpg')] bg-contain  relative z-1 shadow-lg rounded-sm ">
     <div class="chat chat-start absolute top-6 left-44 animate-chat1 z-0 ">
         <div class="chat-bubble chat-bubble-primary">You are awesome! You deserve the attention!</div>
     </div>
@@ -19,6 +19,7 @@
         <div class="chat-bubble chat-bubble-warning">Brag thou shall, because brag is an art. </div>
     </div>
     <div class="chat chat-start absolute bottom-24 left-36 animate-chat7 -z-10">
-        <div class="chat-bubble chat-bubble-error">Embed brag stacks & make’em visible.</div>
+        <div class="chat-bubble chat-bubble-error">Embed brag stacks & make'em visible.</div>
     </div>
 </div>
+<hr class=" my-8"> 
