--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3228,8 +3228,8 @@ details.collapse summary::-webkit-details-marker {
   bottom: 0px;
 }
 
-.left-1 {
-  left: 0.25rem;
+.bottom-24 {
+  bottom: 6rem;
 }
 
 .left-12 {
@@ -3240,72 +3240,52 @@ details.collapse summary::-webkit-details-marker {
   left: 6rem;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.top-14 {
-  top: 3.5rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
-.top-60 {
-  top: 15rem;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
-.right-24 {
-  right: 6rem;
-}
-
-.top-6 {
-  top: 1.5rem;
+.left-36 {
+  left: 9rem;
 }
 
 .left-44 {
   left: 11rem;
 }
 
-.bottom-24 {
-  bottom: 6rem;
+.right-0 {
+  right: 0px;
 }
 
-.left-36 {
-  left: 9rem;
-}
-
-.right-56 {
-  right: 14rem;
+.right-1 {
+  right: 0.25rem;
 }
 
 .right-1\/2 {
   right: 50%;
 }
 
+.right-24 {
+  right: 6rem;
+}
+
 .top-1\/2 {
   top: 50%;
 }
 
+.top-16 {
+  top: 4rem;
+}
+
 .top-2\/3 {
   top: 66.666667%;
+}
+
+.top-32 {
+  top: 8rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
+.top-60 {
+  top: 15rem;
 }
 
 .-z-10 {
@@ -3374,6 +3354,10 @@ details.collapse summary::-webkit-details-marker {
 
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .line-clamp-3 {
@@ -3464,92 +3448,8 @@ details.collapse summary::-webkit-details-marker {
   }
 }
 
-.animate-chat6 {
-  animation: appear 14s linear infinite 10s;
-}
-
-@keyframes appear {
-  0% {
-    transform: rotate(0deg);
-    z-index: 10;
-  }
-
-  28% {
-    transform: rotate(0deg);
-    z-index: -10;
-  }
-
-  100% {
-    transform: rotate(0deg);
-    z-index: -10;
-  }
-}
-
-.animate-chat5 {
-  animation: appear 14s linear infinite 8s;
-}
-
-@keyframes appear {
-  0% {
-    transform: rotate(0deg);
-    z-index: 10;
-  }
-
-  28% {
-    transform: rotate(0deg);
-    z-index: -10;
-  }
-
-  100% {
-    transform: rotate(0deg);
-    z-index: -10;
-  }
-}
-
-.animate-chat7 {
-  animation: appear 14s linear infinite 12s;
-}
-
-@keyframes appear {
-  0% {
-    transform: rotate(0deg);
-    z-index: 10;
-  }
-
-  28% {
-    transform: rotate(0deg);
-    z-index: -10;
-  }
-
-  100% {
-    transform: rotate(0deg);
-    z-index: -10;
-  }
-}
-
-.animate-chat4 {
-  animation: appear 14s linear infinite 6s;
-}
-
-@keyframes appear {
-  0% {
-    transform: rotate(0deg);
-    z-index: 10;
-  }
-
-  28% {
-    transform: rotate(0deg);
-    z-index: -10;
-  }
-
-  100% {
-    transform: rotate(0deg);
-    z-index: -10;
-  }
-}
-
-.animate-chat3 {
-  animation: appear 14s linear infinite 4s;
+.animate-chat1 {
+  animation: appear 14s linear infinite;
 }
 
 @keyframes appear {
@@ -3590,8 +3490,92 @@ details.collapse summary::-webkit-details-marker {
   }
 }
 
-.animate-chat1 {
-  animation: appear 14s linear infinite;
+.animate-chat3 {
+  animation: appear 14s linear infinite 4s;
+}
+
+@keyframes appear {
+  0% {
+    transform: rotate(0deg);
+    z-index: 10;
+  }
+
+  28% {
+    transform: rotate(0deg);
+    z-index: -10;
+  }
+
+  100% {
+    transform: rotate(0deg);
+    z-index: -10;
+  }
+}
+
+.animate-chat4 {
+  animation: appear 14s linear infinite 6s;
+}
+
+@keyframes appear {
+  0% {
+    transform: rotate(0deg);
+    z-index: 10;
+  }
+
+  28% {
+    transform: rotate(0deg);
+    z-index: -10;
+  }
+
+  100% {
+    transform: rotate(0deg);
+    z-index: -10;
+  }
+}
+
+.animate-chat5 {
+  animation: appear 14s linear infinite 8s;
+}
+
+@keyframes appear {
+  0% {
+    transform: rotate(0deg);
+    z-index: 10;
+  }
+
+  28% {
+    transform: rotate(0deg);
+    z-index: -10;
+  }
+
+  100% {
+    transform: rotate(0deg);
+    z-index: -10;
+  }
+}
+
+.animate-chat6 {
+  animation: appear 14s linear infinite 10s;
+}
+
+@keyframes appear {
+  0% {
+    transform: rotate(0deg);
+    z-index: 10;
+  }
+
+  28% {
+    transform: rotate(0deg);
+    z-index: -10;
+  }
+
+  100% {
+    transform: rotate(0deg);
+    z-index: -10;
+  }
+}
+
+.animate-chat7 {
+  animation: appear 14s linear infinite 12s;
 }
 
 .cursor-default {
@@ -3672,6 +3656,10 @@ details.collapse summary::-webkit-details-marker {
   border-radius: 0.375rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -3734,16 +3722,8 @@ details.collapse summary::-webkit-details-marker {
   background-image: url('/images/high-self-esteem.jpg');
 }
 
-.bg-cover {
-  background-size: cover;
-}
-
 .bg-contain {
   background-size: contain;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
 }
 
 .p-2 {
