--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs-plugin-utc@0.1.2/dist/dayjs-plugin-utc.min.js"></script>
-    <title>Tech Blog | {{ pageTitle }} |</title>
+    <title>Brag Blog | {{ pageTitle }} |</title>
 </head>
 <body class="font-content text-xl">
 
