--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,7 @@
 <div class='w-8/12 mx-auto'>
   <form class='bg-gray-900 opacity-95 shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4'>
-    <h1 class='font-bold text-lg text-center bragBlogForm'>Sign In to Brag Blog!</h1>
+    <h1 class='font-bold text-lg text-center bragBlogForm'>Sign In to Let's
+      Brag!</h1>
     <div class='mb-4'>
       <label class='block text-blue-300 py-2 font-bold mb-2' for='email'>
         Enter your Email Id
