--- a/public/css/input.css
+++ b/public/css/input.css
@@ -2,94 +2,92 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body{
-    width: 98%;
-    margin-inline: auto;
+body {
+  width: 98%;
+  margin-inline: auto;
 }
 
-.sliding-anim::before{
-    content:"";
-    position:absolute;
-    top:2px;
-    left: 2px;
-    width: 50%;
-    background-color: rgba(255, 255, 255, 0.05);
+.sliding-anim::before {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 50%;
+  background-color: rgba(255, 255, 255, 0.05);
 }
-.sliding-anim span:nth-child(1){
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(to right, #00cfbd, #00100d);
-    animation: anim1 2s infinite linear ;
-    
+.sliding-anim span:nth-child(1) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, #00cfbd, #00100d);
+  animation: anim1 2s infinite linear;
 }
-@keyframes anim1{
-    0%{
-        transform: translateX(-100%);
-    }
-    100%{
-        transform: translateX(100%);
-    }
+@keyframes anim1 {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }
-.sliding-anim span:nth-child(2){
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(to bottom, #00cfbd, #00100d);
-    animation: anim2 2s 1s infinite linear ;
+.sliding-anim span:nth-child(2) {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(to bottom, #00cfbd, #00100d);
+  animation: anim2 2s 1s infinite linear;
 }
-@keyframes anim2{
-    0%{
-        transform: translateY(-100%);
-    }
-    100%{
-        transform: translateY(100%);
-    }
+@keyframes anim2 {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(100%);
+  }
 }
-.sliding-anim span:nth-child(3){
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(to left, #00cfbd, #00100d);
-    animation: anim3 2s infinite linear ;
+.sliding-anim span:nth-child(3) {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to left, #00cfbd, #00100d);
+  animation: anim3 2s infinite linear;
 }
-@keyframes anim3{
-    0%{
-        transform: translateX(100%);
-    }
-    100%{
-        transform: translateX(-100%);
-    }
+@keyframes anim3 {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
-.sliding-anim span:nth-child(4){
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(to top, #00cfbd, #00100d);
-    animation: anim4 2s 1s infinite linear ;
+.sliding-anim span:nth-child(4) {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(to top, #00cfbd, #00100d);
+  animation: anim4 2s 1s infinite linear;
 }
-@keyframes anim4{
-    0%{
-        transform: translateY(100%);
-    }
-    100%{
-        transform: translateY(-100%);
-    }
+@keyframes anim4 {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
 }
-.sliding-anim:hover{
-    background: #EEEB18;
-    box-shadow: 0 1.4rem 3rem #EEEB18;
-    color: black;
+.sliding-anim:hover {
+  background: #eeeb18;
+  box-shadow: 0 1.4rem 3rem #eeeb18;
+  color: black;
 }
-.sliding-anim:hover span{
-    background: #EEEB18; 
+.sliding-anim:hover span {
+  background: #eeeb18;
 }
