login bug fixed

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -56,24 +56,10 @@
     </div>
 
     <div class='flex items-center justify-end gap-4'>
-      <button
-        class='btn btn-accent text-accent-content continue'
-        disabled
-        type='button'
-      > Continue </button>
-      <button
-        class='btn btn-accent text-accent-content signIn hidden'
-        disabled
-        type='button'
-      > Sign In </button>
-      <button
-        class='btn btn-accent text-accent-content signUp hidden'
-        disabled
-        type='button'
-      > Sign Up </button>
-      <button class='btn btn-accent text-accent-content cancel' type='button'>
-        Cancel
-      </button>
+      <button class=' btn  btn-accent text-accent-content continue !hidden' type='button'> Continue </button>
+      <button class='btn btn-accent text-accent-content signIn !hidden' type='button'> Sign In </button>
+      <button class='btn btn-accent text-accent-content signUp !hidden' type='button'> Sign Up </button>
+      <button class='btn btn-accent text-accent-content cancel' type='button'> Cancel </button>
     </div>
   </form>
 </div>
