--- a/views/partials/comment-form.handlebars
+++ b/views/partials/comment-form.handlebars
@@ -8,4 +8,5 @@
         Please provide a comment.
     </p>
     <button class="btn btn-accent text-accent-content commentbtn"  type="button" id="post" disabled data-id="{{id}}"> Post comment </button>
+    <button class='btn btn-accent text-accent-content cancel' type='button'> Cancel </button>
 </form>
