--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -3,7 +3,7 @@
         <a class="text-2xl font-semibold hover:opacity-70 rounded-md" href="/">Home</a>
     </div>
     <div class="navbar-center">
-        <div class="btn btn-ghost text-3xl shadow-xl truncate duration-1000 relative sliding-anim font-bold font-heading cursor-default ">
+        <div class="px-3 py-2 rounded-lg text-3xl shadow-xl truncate duration-1000 relative sliding-anim font-bold font-heading cursor-default ">
             <span></span>
             <span></span>
             <span></span>
