--- a/views/partials/rating-hearts.handlebars
+++ b/views/partials/rating-hearts.handlebars
@@ -1,3 +1,4 @@
+<div>{{rating.rating}}</div>
 <div class="rating rating-lg gap-1">
   <input type="radio" name="rating-3" value="1" class="mask mask-heart bg-red-400" data-id="{{id}}" checked />
   <input type="radio" name="rating-3" value="2" class="mask mask-heart bg-orange-400" data-id="{{id}}" />
