user photos are getting dynamic

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -22,8 +22,13 @@
             <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
                 
                 <div class="w-10 mask mask-hexagon">
-                    <img alt="Tailwind CSS Navbar component"
+                    {{#if loggedIn}}
+                    <img alt="Logged in user profile photo"
+                        src=`/images/{{loggedInUserPhoto}}` />
+                    {{else}}
+                    <img alt="stranger photo"
                         src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                    {{/if}}
                 </div>
                 
             </div>
