All pictures are made dynamic

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -23,11 +23,9 @@
                 
                 <div class="w-10 mask mask-hexagon">
                     {{#if loggedIn}}
-                    <img alt="Logged in user profile photo"
-                        src=`/images/{{loggedInUserPhoto}}` />
+                    <img alt="Logged in user profile photo" src="/images/{{loggedInUserPhoto}}" />
                     {{else}}
-                    <img alt="stranger photo"
-                        src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                    <img alt="stranger photo" src="/images/avatar.png" />
                     {{/if}}
                 </div>
                 
