--- a/views/partials/post-detail--comment-card.handlebars
+++ b/views/partials/post-detail--comment-card.handlebars
@@ -4,8 +4,7 @@
       <div class='flex-none gap-4 shadow-xl hover:opacity-90'>
         <div class='avatar inline-block'>
           <div class='w-12 mask mask-hexagon'>
-            {{!-- <img src='https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg'/> --}}
-            <img src='/images/{{user.photo}}'/>
+            <img src='/images/{{user.profile_photo}}'/>
           </div>
         </div>
         <div class='inline-block'>
