--- a/views/partials/post-stats.handlebars
+++ b/views/partials/post-stats.handlebars
@@ -3,7 +3,7 @@
         <div class="stat-figure text-secondary">
             <div class="avatar">
                 <div class="w-16 mask mask-hexagon">
-                    <img src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
+                    <img src="/images/{{user.profile_photo}}" alt="post creater photo"/>
                 </div>
             </div>
         </div>
