--- a/views/post-detail.handlebars
+++ b/views/post-detail.handlebars
@@ -1,6 +1,5 @@
 <article class=" bg-neutral shadow-xl hover:opacity-90 px-6 py-3">
-    <figure class="flex justify-center"><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-            alt="Shoes" />
+    <figure class="flex justify-center "><img src="/images/{{post_photo}}" alt="{{title}}" class="max-w-screen-xl rounded-xl" />
     </figure>
     <div>
         <div class="flex justify-start gap-3 my-4">
