comment delete route added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs-plugin-utc@0.1.2/dist/dayjs-plugin-utc.min.js"></script>
     <title> Let's Brag! | {{ pageTitle }} |</title>
 </head>
-<body class="font-content text-xl">
-
+<body class="font-content text-xl max-w-screen-2xl">
+    
     {{> header}}
     
     <div class= "my-4">
