--- a/views/partials/hero-image.handlebars
+++ b/views/partials/hero-image.handlebars
@@ -1,4 +1,4 @@
-<div class="w-full h-110 bg-[url('/images/high-self-esteem.jpg')] bg-contain  relative z-1 shadow-lg rounded-sm ">
+<div class="w-full h-72  md:h-110 bg-[url('/images/high-self-esteem.jpg')] bg-contain  relative z-1 shadow-lg rounded-sm ">
     <div class="chat chat-start absolute top-6 left-44 animate-chat1 z-0 ">
         <div class="chat-bubble chat-bubble-primary">You are awesome! You deserve the attention!</div>
     </div>
@@ -8,7 +8,7 @@
     <div class="chat chat-start absolute top-2/3 left-12 animate-chat3 -z-10">
         <div class="chat-bubble chat-bubble-secondary">Do you know the best mood booster? "Giving yourself props!"</div>
     </div>
-    <div class="chat chat-end absolute top-60 right-1  animate-chat4 -z-10">
+    <div class="chat chat-end absolute bottom-20 right-1  animate-chat4 -z-10">
         <div class="chat-bubble chat-bubble-accent">When you brag two things immediately happen.<br> 1. You model confidence to others. <br>2. You set the bar higher for next time.
         </div>
     </div>
