--- a/views/partials/user-profile.handlebars
+++ b/views/partials/user-profile.handlebars
@@ -1,18 +1,35 @@
-<div class="hero hover:opacity-70 rounded-md">
-        <div class="hero-content flex-col lg:flex-row-reverse">
-            {{#if profile_photo}}
-                <img src="/images/{{profile_photo}}" class="max-w-16 rounded-lg shadow-2xl" />
-            {{else}}
-                <img src="/images/{{user.profile_photo}}" class="max-w-16 rounded-lg shadow-2xl" />
-            {{/if}}
-            <div>
-                <h2 class=" font-bold text-accent">Welcome, {{loggedInUser}}!</h2>
-                {{#if email}}
 
-                {{email}}
-                {{else}}
+<div class="hero hover:opacity-70 rounded-md">
+    <div class="hero-content flex-col md:flex-row-reverse">
+        {{#if user}}
+            <img src="/images/{{user.profile_photo}}" class="max-w-16 rounded-lg shadow-2xl" />
+            <div>
+                <h2 class=" font-bold text-accent">Welcome, {{user.username}}!</h2>
+                <div class="text-right">
                     {{user.email}}
-                {{/if}}
+                </div>
             </div>
-        </div>
+        {{else}}
+            <img src="/images/{{profile_photo}}" class="max-w-16 rounded-lg shadow-2xl" />
+            <div>
+                <h2 class=" font-bold text-accent">Welcome, {{username}}!</h2>
+                <div class="text-right">
+                    {{email}}
+                </div>
+            </div>
+        {{/if}}
+    </div>
 </div>
+{{#unless pprofile_photo}}
+    <form enctype="multipart/form-data">
+        <input type="file" class="file-input file-input-bordered file-input-accent w-full max-w-xs" name="avatar" />
+        {{#if id}}
+            <input type="submit" value="Upload " class="btn btn-accent" data-id="{{id}}">
+        {{else}}
+            <input type="submit" value="Upload " class="btn btn-accent" data-id="{{user.id}}">
+        {{/if}}
+    </form>
+
+{{/unless}}
+
+<script src="/scripts/userProfile.js" type="application/javascript"></script>
