--- a/views/partials/comment-form.handlebars
+++ b/views/partials/comment-form.handlebars
@@ -1,12 +1,12 @@
-<form class=" opacity-95 shadow-lg rounded-lg px-8 pt-6 pb-8 mb-10 w-full">
+<form class=" opacity-95 shadow-lg rounded-lg px-8 pt-6 pb-8 mb-10 w-full {{visible}} {{name}}">
     <label class="block text-blue-300 py-2 font-bold mb-2" for="comment">
         Type your comment
     </label>
-    <textarea class=" textarea textarea-bordered bg-neutral textarea-lg w-full  peer shadow appearance-none p-3 placeholder-shown:text-white  focus:placeholder:text-purple-500 text-purple-500 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
-        id="comment"  placeholder="comment..." required ></textarea>
+    <textarea class="content textarea textarea-bordered bg-neutral textarea-lg w-full  peer shadow appearance-none p-3 placeholder-shown:text-white  focus:placeholder:text-purple-500 text-purple-500 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
+         placeholder="comment..." required >{{contentToEdit}}</textarea>
     <p class="mt-2 invisible peer-invalid:visible text-pink-600 text-sm ">
         Please provide a comment.
     </p>
-    <button class="btn btn-accent text-accent-content commentbtn"  type="button" id="post" disabled data-id="{{id}}"> Post comment </button>
+    <button class="btn btn-accent text-accent-content submit"  type="button"  disabled data-id="{{id}}"> Post comment </button>
     <button class='btn btn-accent text-accent-content cancel' type='button'> Cancel </button>
 </form>
