--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -14,21 +14,24 @@
     <div class="navbar-end">
         <span class="text-sm text-white">
             {{#if loggedIn}}
-                G'day, {{loggedInUser}}!
+                <span id="loggedInUser"> </span>
+                {{!-- G'day, {{loggedInUser}}! --}}
+            {{else}}
+                G'day, Guest!
             {{/if}}
         </span>
         <div class="dropdown dropdown-end">
             
             <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
                 
-                <div class="w-10 mask mask-hexagon">
+                <div class="w-10 mask mask-hexagon relative">
                     {{#if loggedIn}}
-                    <img alt="Logged in user profile photo" src="/images/{{loggedInUserPhoto}}" />
+                    {{!-- <img alt="Logged in user profile photo" src="/images/{{loggedInUserPhoto}}" /> --}}
+                    <img alt="Logged in user profile photo" src=`` id="loggedInUserPhoto"/>
                     {{else}}
                     <img alt="stranger photo" src="/images/avatar.png" />
                     {{/if}}
                 </div>
-                
             </div>
             <ul tabindex="0"
                 class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-52">
