--- a/views/partials/user-profile.handlebars
+++ b/views/partials/user-profile.handlebars
@@ -21,7 +21,7 @@
     </div>
 </div>
 {{#unless pprofile_photo}}
-    <form enctype="multipart/form-data">
+    <form enctype="multipart/form-data" method='POST' action='/upload'>
         <input type="file" class="file-input file-input-bordered file-input-accent w-full max-w-xs" name="avatar" />
         {{#if id}}
             <input type="submit" value="Upload " class="btn btn-accent" data-id="{{id}}">
@@ -32,4 +32,4 @@
 
 {{/unless}}
 
-<script src="/scripts/userProfile.js" type="application/javascript"></script>
+{{!-- <script src="/scripts/userProfile.js" type="application/javascript"></script> --}}
