--- a/views/partials/post-create-form.handlebars
+++ b/views/partials/post-create-form.handlebars
@@ -1,10 +1,4 @@
-<form enctype="multipart/form-data" method='POST' action='/upload/brag'>
-<label class="block text-blue-300 py-2 font-bold mb-2" for="brag">
-       Upload blog post photo
-    </label>
-    <input type="file" class="file-input file-input-bordered file-input-accent w-full max-w-xs" name="brag" />
-    <input type="submit" value="Upload " class="btn btn-accent">
-</form>
+{{> post-photo-form}}
 <form class=" opacity-95 shadow-lg rounded-lg px-8 pt-6 pb-8 mb-10 w-full">
 
 
