--- a/views/partials/post-photo-form.handlebars
+++ b/views/partials/post-photo-form.handlebars
@@ -1,7 +1,10 @@
-<form enctype="multipart/form-data" method='POST' action='/upload/brag'>
-<label class="block text-blue-300 py-2 font-bold mb-2" for="brag">
-    Upload blog post photo
-</label>
-<input type="file" class="file-input file-input-bordered file-input-accent w-full max-w-xs" name="brag" />
-<input type="submit" value="Upload " class="btn btn-accent">
+<form enctype="multipart/form-data" method='POST' action='/upload/brag' class=" px-8">
+    <label class="block text-blue-300 py-2 font-bold mb-2" for="brag">
+        Upload blog post photo
+    </label>
+    <input type="file" class="file-input file-input-bordered file-input-accent w-full max-w-xs" name="brag" />
+    <input type="submit" value="Upload " class="btn btn-accent">
+    {{#if uploadResult}}
+        <span class=" italic text-sm text-accent align-bottom ml-4 upload "><output>{{uploadResult}} </output> uploaded!</span>
+    {{/if}}
 </form>
