--- a/views/partials/hero-image.handlebars
+++ b/views/partials/hero-image.handlebars
@@ -5,7 +5,7 @@
     <div class="chat chat-end absolute top-16  right-24 animate-chat2 -z-10">
         <div class="chat-bubble chat-bubble-info">Ditch the self awareness. Let your achievements shine bright!</div>
     </div>
-    <div class="chat chat-start absolute top-2/3 left-12 animate-chat3 -z-10">
+    <div class="chat chat-start absolute bottom-1/3 left-20 animate-chat3 -z-10">
         <div class="chat-bubble chat-bubble-secondary">Do you know the best mood booster? "Giving yourself props!"</div>
     </div>
     <div class="chat chat-end absolute bottom-20 right-1  animate-chat4 -z-10">
