--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
 <footer
-  class='fixed right-0 bottom-0 p-6 text-sm text-center md:text-right fade-in bg-slate-50 w-full'
+  class='fixed bottom-0 p-6 text-sm text-center fade-in bg-slate-50 w-full flex justify-center items-center'
+  style='left: 0; right: 0;'
 >
-  &copy;
-  <a class='text-amber-800 no-underline hover:no-underline'>p2-Group2</a>
-  2024 - edX Coding Bootcamp @The University of Sydney
+  &copy; 2024 Andrii Medvedev, Jonathan Santoso, Suyash Maharjan, and Yukitoshi
+  Imaizumi-Zhou. All Rights Reserved.
 </footer>
